--- a/addprise3/testhot.html
+++ b/addprise3/testhot.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>测试热启动</title>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdn.bootcss.com/axios/0.16.2/axios.min.js"></script>
 </head>
 <body>
-    <div id="app"></div>
-    <script type="text/javascript" src="main.js"></script>
+    <div id="hand-wrapper">
+					<div>当前点赞数量：<span id="currentPraise"></span></div>
+					<div class="hand">
+						<div class="hand-left"></div>
+						<div class="hand-right">
+							<div class="hand-right-finger finger1"><div class='finger1-press'></div></div>
+							<div class="hand-right-finger finger2"></div>
+							<div class="hand-right-finger finger3"></div>
+							<div class="hand-right-finger finger4"></div>
+							<div class="hand-right-finger finger5"></div>
+							<div class="hidden"></div>
+						</div>
+					</div>
+				</div>
 </body>
 </html>
