修改x-tag组件，加入延迟执行事件

--- a/addprise3/src/wiget/layout.html
+++ b/addprise3/src/wiget/layout.html
@@ -15,12 +15,12 @@
     {% block content %}{% endblock %}
 </body>
 {% block script%}{% endblock%}
-<!-- <script type="text/javascript">
+<script type="text/javascript">
 //获取当前数据库中的点赞数
 axios.get('/praise/select')
     .then(function(response) {
         $("#currentPraise").text(response.data);
     });
-</script> -->
+</script>
 
 </html>
