增加pjax，星星组件（暂未实现单页功能）

--- a/addprise3/src/wiget/index.html
+++ b/addprise3/src/wiget/index.html
@@ -1,5 +1,8 @@
+<div>当前点赞数量：<span id="currentPraise"></span></div>
+<ul>
+    <li><a href="./thumb">大拇指点赞</a></li>
+    <li><a href="./star">星星点赞</a></li>
+</ul>
 <div id="hand-wrapper">
-		<div>当前点赞数量：<span id="currentPraise"></span></div>
-		<x-praise></x-praise>
-	</div>
-  
+    <div id="pjax-container"></div>
+</div>
